feat: Evolui o sistema adicionando OfertaDisciplina, matricula por oferta e historico do aluno